2021-02-24  Enrico Schumann  <es@enricoschumann.net>

        * data/tznames.txt: update timezone names;
        remove duplicates

2021-02-11  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Suggests): add 'tinytest'

        * R/functions.R (guess_datetime): use more
        explicit quantifiers
        (guess_datetime): fix use of 'tz' argument,
        which had been ignored

2020-09-03  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (hour, minute, second): add
        functions

2020-03-25  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.4-0

2020-02-21  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (guess_datetime): support also
        pattern "YYYYMMDD" (8 digits, starting with a 1 or 2)
        (guess_datetime): new arguments 'date.only',
        'within' and 'tz'

2019-12-09  Enrico Schumann  <es@enricoschumann.net>

        * R/data.R: add vectors 'month.name.de' and
        'month.abb.de.din1355.1'

2019-12-01  Enrico Schumann  <es@enricoschumann.net>

        * data/tznames: add dataframe 'tznames'; see
        ?tznames and the file data/tznames.txt for details

2019-05-14  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.3-1

        * R/functions.R (nth_day): fix regexp that
        matches years (which also greatly improves
        performance)

2019-03-21  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.3-0

2019-03-20  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (nth_day): 'timestamps',
        'start' and 'end' may be simple years. For
        start/end, they will be interpreted as
        1 Jan/31 Dec of that year

2019-03-14  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (nth_day): support character
        month names

2019-02-13  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (end_of_quarter): add function
